tests/models/enum/unit/fail/lt.rs
use dade::model;
#[model]
enum TestModel {
    #[field(lt = 2)]
    Value
}
fn main() {}
