tests/models/enum/unit/fail/lt.stderr
error: Only support alias term on the unit field.
 --> tests/models/enum/unit/fail/lt.rs:5:5
  |
5 |     Value
  |     ^^^^^
